添加了对mcp服务支持,json解析的优化 添加了对mcp服务支持 WAGGER.json为空的问题可以通过在carbon中通过move方法进行生成 应用订阅api添加了自定义属性 更新dao文件 更新openapi文件